# lz77-rs

./: Cargo.toml
src/: buffer.rs  codeword.rs  decoder.rs  encoder.rs  errors.rs  lib.rs
src/searcher/: linear_search.rs  mod.rs
