[package]
name = "lz77-rs"
version = "0.1.1"
authors = ["moritz9422 <moritz9422@gmail.com>", "Will Springer <skirmisher@protonmail.com>"]
autobins = false
edition = "2015"
license = "Unlicense"

[lib]
name = "lz77"

[[example]]
name = "compress"
path = "src/bin/compress.rs"

[[example]]
name = "decompress"
path = "src/bin/decompress.rs"

[dependencies]
byteorder = "^1"
failure  = "^0.1"

[dev-dependencies]
clap = "^2"
